# db-knownprojects

./: .gitignore  .gitmodules  README.md  kpdb.sh
knownprojects_build/: 01_dataloading.sh  02.2_clusters.sh  02_build.sh  02_build_projects.sh  02_build_source_tables.sh  03.1_clusters.sh  03.2_housing.sh  03_export.sh  03_housing.sh  04_archive.sh  04_build_kpdb.sh  04_export.sh  05_corrections.sh  05_qaqc.sh  06_archive.sh  06_qaqc.sh  config.sh  example.env  pyproject.toml  requirements.txt  version.env
knownprojects_build/_python/: dedup_units.py
knownprojects_build/_sql/: _functions.sql  _procedures.sql  _project_inputs.sql  _project_record_ids.sql  apply_corrections.sql  combine.sql  correct_projects.sql  create_corrections.sql  create_kpdb.sql  dcp_application.sql  dcp_housing.sql  dob_match.sql  project_inputs.sql  project_record_ids.sql  source_data.sql
knownprojects_build/data/: KPDB_Tracker_20191115_MS.xlsx.REMOVED.git-id  metadata.json
knownprojects_build/extractor/: __init__.py  extractors.py  utils.py
knownprojects_build/old_runners/: 05_corrections.sh  06_archive.sh
knownprojects_build/output/: qc_bbl_needgeoms.csv  qc_bblgeoms_stats.csv  qc_geoms_stats.csv  qc_project_needgeoms.csv
knownprojects_build/python/: carto_to_build.py  clusters.py  dataloading.py  dedup_units.py  dob_match.py  dob_review_to_build.py  housing_match.py  requirements.txt  resolve_clusters.py  update_combined_dob.py  update_proj_tables.py  upload.py  upload_dob_match_to_carto.py
knownprojects_build/sql/: _export.sql  _functions.sql  _project_record_ids.sql  combine.sql  (+38 more)
(+88 files in other folders)
