[tool.poetry]
name = "extractor"
version = "0.1.0"
description = ""
authors = ["someone <email@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.8.2"
xlrd = "^2.0.1"
openpyxl = "^3.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
